--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,15 @@
 							!javax.jmdns.*,
 							!org.joda.convert.*,
 							!javax.portlet.*,
+							!io.netty.bootstrap.*,
+							!io.netty.buffer.*,
+							!io.netty.channel.*,
+							!io.netty.channel.nio.*,
+							!io.netty.channel.socket.*,
+							!io.netty.channel.socket.nio.*,
+							!io.netty.handler.ssl.*,
+							!io.netty.handler.timeout.*,
+							!io.netty.util.concurrent.*,
 							
 							*
 							
@@ -249,6 +258,14 @@
 		<version>1.2.17</version>
 	</dependency>
  -->
+
+<!-- https://mvnrepository.com/artifact/org.mongodb/mongo-java-driver -->
+<dependency>
+    <groupId>org.mongodb</groupId>
+    <artifactId>mongo-java-driver</artifactId>
+    <version>3.4.3</version>
+</dependency>
+
 
 </dependencies>
 
